--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -628,7 +628,7 @@
       /ip firewall nat remove [find comment="VPN-GAME"]<br>
       /ip firewall mangle remove [find new-routing-mark="vpn-routing-game"]
         <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
-          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
           Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
