--- a/queue-tree-generator-shared.html
+++ b/queue-tree-generator-shared.html
@@ -232,7 +232,7 @@
         </div>
       </div>
       <div class="footer">
-        © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+        © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px">
           Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
         </div>			
