--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -189,7 +189,7 @@
       </div>
       <div class="footer">
         <div style="margin-top:0px; text-align:left">
-          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+          Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
           Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
