--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -600,11 +600,11 @@
         </table>
       </div>
       <div class="footer">
-        © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+        Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
         <div style="margin-top:1px; color:#888; font-size:11px">
-          Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
+          Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
         </div>			
-      </div>	  
+      </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
       <div id="center-screen" class="center-screen">Great! One Step Again <br>For Activate Your Member<br><button id="verify">VERIFY YOUR E-MAIL NOW</button></div>
