--- a/login/index.html
+++ b/login/index.html
@@ -47,7 +47,7 @@
           <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
           <button  id="signout">Logout</button>
           <div style="margin-top:20px; padding-top:10px;width:100%;color:#292929; border-top:1px solid #bbb;font-weight:normal;font-size:13px">
-            © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+            Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
           </div>
           <div style="margin-top:1px; color:#666; font-size:11px;font-weight:normal">
           Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
