--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -196,7 +196,7 @@
       </div>
       <div class="footer">
         <div style="margin-top:0px; text-align:left">
-          Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
           Project by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
