--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -652,7 +652,7 @@
         /ip firewall address-list remove [find comment="ROUTING-GAME-BY-BNT"]<br>
         /routing table remove [find comment="ROUTING-GAME-BY-BNT"]
         <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <div style="margin-top:1px; color:#888; font-size:11px">
           Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
