--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -258,7 +258,7 @@
         <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;text-align:left">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px">
-          Project by <a style="color:#888" target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a style="color:#888" target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
+          Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
         </div>	 		  
         </div>			
       </div>
