--- a/login/index.html
+++ b/login/index.html
@@ -7,6 +7,7 @@
     <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
+    <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">	
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <link rel="stylesheet" href="./index.css">
   </head>
