--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       # Tools For Mikrotik By BuanaNETPBun.Github.io
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
-      # Site      : http://www.o-om.com
+      # Site      : https://www.o-om.com
       # Sosmed    : https://fb.me/buananetmikrotik/	
       ################################################
       ----------------------------------------------- */  
@@ -340,15 +340,15 @@
             <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik RouterOS Download Official</a></p>
           </div>
           <div class="column">
-            <p><a target="_blank" rel="nofollow"  href="http://www.routeros.co.id">Routeros.co.id (Indonesia Server)</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.routeros.co.id">Routeros.co.id (Indonesia Server)</a></p>
           </div>
         </div>
         <h2>MIKROTIK WIRELESS TOOLS</h2>
         <div class="row">
           <div class="column">
-            <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://shop.duxtel.com.au/article_info.php?articles_id=53">MikroTik Link Planner</a> </p>
-            <p><a rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=wireless_abg.zip">Wireless MiniPCI A/B/G</a></p>
+            <p><a rel="nofollow"  href="https://www.mikrotik.co.id/getfile.php?nf=wireless_abg.zip">Wireless MiniPCI A/B/G</a></p>
           </div>
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/calculator">Wireless link calculator (need login)</a></p>
@@ -359,13 +359,13 @@
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
-            <p><a target="_blank" rel="nofollow"  href="http://www.routerboard.co.id/">RouterBoard Comparison Table</a></p>
-            <p><a target="_blank" rel="nofollow"  href="http://www.irouteros.com/duibi/duibi.php">MikroTik Product Comparison</a></p>
-            <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_proxy.php">RAM Proxy MikroTik Calculator</a></p>
-            <p><a rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=neighbour.zip">Neighbour Viewer dan Mac Telnet</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.routerboard.co.id/">RouterBoard Comparison Table</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.irouteros.com/duibi/duibi.php">MikroTik Product Comparison</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.co.id/test_proxy.php">RAM Proxy MikroTik Calculator</a></p>
+            <p><a rel="nofollow"  href="https://www.mikrotik.co.id/getfile.php?nf=neighbour.zip">Neighbour Viewer dan Mac Telnet</a></p>
           </div>
           <div class="column">
-            <p><a rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=trafr.tgz">Trafr Sniffer linux</a></p>
+            <p><a rel="nofollow"  href="https://www.mikrotik.co.id/getfile.php?nf=trafr.tgz">Trafr Sniffer linux</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://forum.mikrotik.com/viewtopic.php?t=77193">ATTIX5 Traffic Monitor</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://k3dt.eu/supout-reader/">Supout.rif Reader (Unofficial)</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
@@ -375,7 +375,7 @@
         <div class="row">
           <div class="column">
             <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
-            <p><a target="_blank" rel="nofollow"  href="http://dmasoftlab.com">DMA Radius Manager</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://dmasoftlab.com">DMA Radius Manager</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://billingku.net">Billingku</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://laksa19.github.io/">Mikhmon Billing Hotspot</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://sarang.web.id">Billing Hotspot Sarang-Net</a></p>
