--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       # Sosmed    : https://fb.me/buananetmikrotik/	
       ################################################
       ----------------------------------------------- */  
-      body{background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:15px;line-height:normal;word-wrap:break-word;margin:0;padding:0;color:#292929}
+      *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
+      body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+      html,body{color:#292929;height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
+      *{box-sizing:border-box}
       h1{font-size:48px;font-size:3rem;font-weight:700;letter-spacing:-1.6px;letter-spacing:-.1rem;line-height:1;text-align:center}
       h1 span.light{font-weight:300}
 	  h1 strong{font-weight:600}
@@ -40,7 +43,6 @@
       p{padding:0;margin:4px 0 0 17px;display:list-item;list-style:disc}
       .logo{color:#ddd;text-decoration:none;font-size:25px;font-weight:700;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;color:#ddd;margin-bottom:15px;margin-top:10px;padding:25px;clear:both}
       .logo a{color:#ddd!important;font-size:25px}
-      *{box-sizing:border-box}
       #wrap{min-width:200px;max-width:909px;margin:0 auto;padding:0 5px}
       .content{max-width:100%;margin:0 auto;margin-top:20px;margin-bottom:20px;padding:20px 30px 30px 30px;border-radius:5px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);background:#fff;line-height:1.7}
       a:link{color:#f60;text-decoration:none;font-weight:700}
