--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       .footer{margin-top:15px;text-align:center;font-size:13px}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
-      .terminal{margin-bottom:15px;width:100%;display:none}
+      .terminal{margin-bottom:15px;width:100%;}
       .terminal img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       .tooltip{position:relative;display:inline-block;font-size:13px}
       .tooltip .tooltiptext{visibility:hidden;width:150px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity:.9;transition:opacity .3s}
@@ -192,7 +192,6 @@
         </div>
       </div>
       <div class="content">
-        <h1><span class="light">easy config with generator tools.<br>made for <strong>MikroTik Router<i>OS</i></strong></span></h1>
         <div class="terminal">    
           <img src="./img/terminal.png" alt="MikroTik Terminal">
         </div>
@@ -221,6 +220,7 @@
         <div style="margin-bottom:-30px; margin-top:-12px">
           <div class="gcse-searchresults"></div>
         </div>
+        <h1><span class="light">easy config with generator tools.<br>made for <strong>MikroTik Router<i>OS</i></strong></span></h1>		
         <h2>FIND MIKROTIK ROUTEROS SCRIPT</h2>
         <div class="row">
           <div class="column">
