--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -139,7 +139,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600">VPN TUNNEL ALL TRAFFIC</span> SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
+        <h1><span style="color:#ff6600">ALL TRAFFIC</span> TO <span style="color:#ff6600">VPN TUNNEL </span> SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
