--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -152,7 +152,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>LOAD BALANCING PER CONNECTION CLASSIFIER <span style="color:#ff6600">( LB PCC )</span> CALCULATION</h1>
+        <h1>LOAD BALANCING PCC <span style="color:#ff6600">{ LB PCC } </span> CALCULATION</h1>
       </div>
 	  <div class="main-wrap">
       <div class="sidebar">
