--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -136,7 +136,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>AUTO BACKUP MIKROTIK TO <span style='color:#ff6600;'>E-MAIL</span> GENERATOR</h1>
+        <h1>MIKROTIK AUTO BACKUP TO <span style='color:#ff6600;'>E-MAIL</span> GENERATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
