--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -147,7 +147,7 @@
       <div class="header">
       </div>
       <div class="sidebar">
-        <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTION</h1>
+        <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTIONS</h1>
         <div style="margin-top:15px; margin-bottom:15px;">  
             <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span>
              We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
@@ -165,9 +165,9 @@
               Application Programmable Interface (API), a service that allows users to create custom software or applications that communicate with the router, for example to retrieve information on the router, or even configure the router. Using port 8728. This API port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
               <br><br>
               <code class="routeros">
-              # API Port Enable<br>
+# API Port Enable<br>
               /ip service set api port=8728 address=0.0.0.0/0 disabled=no<br>
-              # API Port Disable<br>
+# API Port Disable<br>
               /ip service set api port=8728 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -180,9 +180,9 @@
               It has the same function as the API, only for the SSL API it is more secure because it is equipped with an ssl certificate. This SSL API runs on port 8729. you can change the port or disable it when not in use.
               <br><br>
               <code class="routeros">
-              # API-SSL Port Enable<br>
+# API-SSL Port Enable<br>
               /ip service set api-ssl port=8729 address=0.0.0.0/0 disabled=no<br>
-              # API-SSL Port Disable<br>
+# API-SSL Port Disable<br>
               /ip service set api-ssl port=8729 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -195,9 +195,9 @@
               Mikrotik provides a standard FTP service that uses ports 20 and 21. FTP is usually used to upload or download router data, such as backup files. FTP authorization using router account user & password. This FTP port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
               <br><br>	
               <code class="routeros">
-              # FTP Port Enable<br>
+# FTP Port Enable<br>
               /ip service set ftp port=21 address=0.0.0.0/0 disabled=no<br>
-              # FTP Port Disable<br>
+# FTP Port Disable<br>
               /ip service set ftp port=21 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -210,9 +210,9 @@
               Is one way to remote router in a console with secure. Almost the same as telnet, only it is more secure because the data transmitted by SSH is encrypted. MikroTik SSH by default uses port 22. This SSH port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
               <br><br>	
               <code class="routeros">
-              # SSH Port Enable<br>
+# SSH Port Enable<br>
               /ip service set ssh port=22 address=0.0.0.0/0 disabled=no<br>
-              # SSH Port Disable<br>
+# SSH Port Disable<br>
               /ip service set ssh port=22 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -225,9 +225,9 @@
               It has almost the same function as ssh, but it has some limitations and a low level of security. Usually used for remote routers in the console. MikroTik telnet service uses port 23. This TELNET port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
               <br><br>	
               <code class="routeros">
-              # TELNET Port Enable<br>
+# TELNET Port Enable<br>
               /ip service set ftp port=23 address=0.0.0.0/0 disabled=no<br>
-              # TELNET Port Disable<br>
+# TELNET Port Disable<br>
               /ip service set ftp port=23 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -240,9 +240,9 @@
               The service that allows the Winbox application to connect to the router. Of course we are already familiar with the Winbox application which is used to graphically remotely router. Winbox connection using port 8291. Some versions of routeros can be hacked using an exploit, You can change the Port for more Secure!	
               <br><br>
               <code class="routeros">
-              # WINBOX Port Enable<br>
+# WINBOX Port Enable<br>
               /ip service set winbox port=8291 address=0.0.0.0/0 disabled=no<br>
-              # WINBOX Port Disable<br>
+# WINBOX Port Disable<br>
               /ip service set winbox port=8291 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -255,9 +255,9 @@
               In addition to the remote console and winbox, Mikrotik also provides a way to access the router via a web-base using a browser. The port used is the standard HTTP port, which is port 80, You can change the port or disable it when not in use.
               <br><br>	
               <code class="routeros">
-              # WWW (webfig) Port Enable<br>
+# WWW (webfig) Port Enable<br>
               /ip service set www port=80 address=0.0.0.0/0 disabled=no<br>
-              # WWW (webfig) Port Disable<br>
+# WWW (webfig) Port Disable<br>
               /ip service set www port=80 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -270,9 +270,9 @@
               Just like the WWW service that allows router access using a web-base, however, www-ssl is more secure because it uses SSL certificates to establish a connection between the router and the remote client. By default use port 443, you can change the port or disable it when not in use.
               <br><br>
               <code class="routeros">
-              # WWW-SSL (webfig) Port Enable<br>
+# WWW-SSL (webfig) Port Enable<br>
               /ip service set www-ssl port=443 address=0.0.0.0/0 disabled=no<br>
-              # WWW-SSL (webfig) Port Disable<br>
+# WWW-SSL (webfig) Port Disable<br>
               /ip service set www-ssl port=443 address=0.0.0.0/0 disabled=yes
               </code>
             </td>
@@ -288,9 +288,9 @@
             <td>
               Mikrotik has a protocol that can broadcast domains through layer 2 so that Mikrotik devices can find each other if they are on the same layer 2 network, the name is Mikrotik Neighbor Discovery Protocol (MNDP). Devices that support MNDP and CDP can find or know other router information such as Router identity information, MAC-Address, and IP-Address. The easiest example when we are going to do winbox in the Neighbors tab, we will see some router information that is connected to layer 2 with our Network Info.<br><br>
               <code class="routeros">
-              # Hide Discover Interface Broadcast <br>
+# Hide Discover Interface Broadcast <br>
               /ip neighbor discovery-settings set discover-interface-list=none <br>
-              # Show Discover Interface Broadcast<br>
+# Show Discover Interface Broadcast<br>
               /ip neighbor discovery-settings set discover-interface-list=all 
               </code>			
             </td>
@@ -303,10 +303,10 @@
               By disabling the discovery interface, it doesn't mean that the router can't be remote using the MAC-Address. If you have previously saved or know the MAC-Address of the Router, you can still remotely use the MAC-Address. If you want the router to be unable to be remotely using MAC-address either through Winbox or via telnet, turn off the MAC-Server feature on the router.
               <br><br>           
               <code class="routeros">
-              # Protect login from Mac Address <br>
+# Protect login from Mac Address <br>
               /tool mac-server mac-winbox set allowed-interface-list=none <br>
               /tool mac-server ping set enabled=no <br>
-              # Unprotect login from Mac Address<br>
+# Unprotect login from Mac Address<br>
               /tool mac-server mac-winbox set allowed-interface-list=all <br>
               /tool mac-server ping set enabled=yes <br>
               </code>
@@ -322,9 +322,9 @@
               Note: in ROS New version, after paste script to enable, don't forget press button within 60 seconds to confirm protected routerboot enable
               <br><br> 	
               <code class="routeros">
-              # Enable Bootloader Protector<br>
+# Enable Bootloader Protector<br>
               /system routerboard settings set protected-routerboot=enabled <br>
-              # Disable Bootloader Protector<br>
+# Disable Bootloader Protector<br>
               /system routerboard settings set protected-routerboot=disabled <br>
               </code>
             </td>
@@ -336,9 +336,9 @@
             <td>
               The Mikrotik router also has a Btest Server feature, which can be used to test connections that have been formed. But if this feature is suddenly used by outsiders, our router is forced to generate traffic or receive bandwidth test traffic, it could be that our bandwidth runs out or suddenly our CPU load becomes 100%. Of course as network admins don't want that, it's better to turn this feature off.<br><br>
               <code class="routeros">
-              # Btest Server Enable<br>
+# Btest Server Enable<br>
               /tool bandwidth-server set enabled=yes authenticate=yes<br>
-              # Btest Server Disable<br>
+# Btest Server Disable<br>
               /tool bandwidth-server set enabled=no authenticate=yes
               </code>			
             </td>
@@ -350,9 +350,9 @@
             <td>
               RoMON is the 'MikroTik Proprietary Protocol' or a protocol that is only supported by MikroTik devices. RoMON communication is based on the RoMON ID parameter taken from the router's MAC address. RoMON enabled devices will make a discovery of MAC Address Peer and also data forwarding protocol independently. if you don't want your mac address to be spread to all networks you can disable RoMON<br><br>
               <code class="routeros">
-              # Enable RoMON<br>
+# Enable RoMON<br>
               /tool romon set enabled=yes secrets=12345<br>
-              # Disable RoMON<br>
+# Disable RoMON<br>
               /tool romon set enabled=no secrets=12345
               </code>			
             </td>
@@ -369,7 +369,7 @@
               Securing the Default Service Port used by Mikrotik such as telnet, ssh, ftp, winbox, www and api. or if not in use can be turned off / disabled. if using a custom port, please add your own<br>
               <br>
               <code class="routeros">
-              # Protect Port Service from Internet<br>
+# Protect Port Service from Internet<br>
               /interface list add name=WAN<br>
               /interface list member <br>
               add list=WAN interface="ether to ISP" <br>
@@ -390,7 +390,7 @@
               Affected all bugfix releases from 6.30.1 to 6.40.7, from 6.29 to 6.42 and from 6.29rc1 to 6.43rc3<br>
               <br>
               <code class="routeros">
-              # Anti Hack from EXPLOIT<br>
+# Anti Hack from EXPLOIT<br>
               /ip firewall filter add action=reject chain=input content=user.dat reject-with=icmp-network-unreachable comment="Anti Hack Exploit"<br>
               /ip firewall filter add action=drop chain=input content=user.dat
               </code>
@@ -404,7 +404,7 @@
               This DDoS is known as Memcrashed, where the attacker exploits the UDP port 11211 protocol used by the Memcached service from the webserver. Memchaced is a technology used for data storage and distribution systems in server memory. The more dynamic the application and the web, the more problems and slowing down the system itself when it comes to retrieving (load) data from the database directly because of the frequent reading and writing processes in storage.
               <br><br>
               <code class="routeros">
-              # Memcrashed - Amplification Attacks UDP 11211<br>
+# Memcrashed - Amplification Attacks UDP 11211<br>
               /ip firewall filter<br>
               add chain=forward dst-port=11211 protocol=udp action=drop comment="Memcrashed - Amplification Attacks UDP 11211"
               </code>
@@ -418,7 +418,7 @@
               Modem or ISP router generally has a default configuration. Whether it's the IP address to the username and password. If there are people who understand this, of course it will be dangerous for your internet network especially for those of you who have managed public networks such as hotspots, because it could be that later you will be disturb by that person such as changing the configuration, changing the wifi name, wifi password. 
               <br><br>
               <code class="routeros">	
-              # Block ACCESS MODEM<br>   
+# Block ACCESS MODEM<br>   
               /ip firewall address-list<br>
               add address=192.168.1.1 list=IP-MODEM<br>
               add address=192.168.2.1 list=IP-MODEM<br>
@@ -436,7 +436,7 @@
               To hide through several routers or via which ISP so that the client cannot read our network path, we can hide or drop it for the traceroute except for the purpose, here's the script to hide our Mikrotik network traffic
               <br><br>	
               <code class="routeros">	
-              # Drop TRACEROUTE <br>
+# Drop TRACEROUTE <br>
               /ip firewall filter<br>
               add action=drop chain=forward icmp-options=11:0 protocol=icmp comment="Drop TRACEROUTE"<br>
               add action=drop chain=forward icmp-options=3:3 protocol=icmp
@@ -451,7 +451,7 @@
               Anti Netcut, Netcut broadcasts ARP and attacks on Layer2, but at least with the script below we are able to answer who is naughty who wants to cut our network.<br><br>
               <span style="">
               <code class="routeros">
-              # ANTI NETCUT<br>
+# ANTI NETCUT<br>
               /ip firewall address-list add list=netcut address=www.arcai.com comment="Anti Netcut"<br>
               /ip firewall mangle add action=add-src-to-address-list address-list=NetcutUser address-list-timeout=1h5m chain=prerouting dst-address-list=netcut dst-port=80 protocol=tcp comment="Anti Netcut"<br>
               /ip firewall filter add action=drop chain=forward src-address-list=NetcutUser comment="Anti Netcut"<br>
@@ -482,7 +482,7 @@
               usually this is indicated by the high upload speed to the internet, to avoid this we simply use the script below.
               <br><br>
               <code class="routeros">	
-              # Block Open Recursive DNS<br>  
+# Block Open Recursive DNS<br>  
               /interface list add name=WAN<br>
               /interface list member <br>
               add list=WAN interface="ether to ISP" <br>
@@ -500,7 +500,7 @@
               Prevent the Open proxy from being misused by outsiders. if using a custom port, please add your own.
               <br><br>
               <code class="routeros">
-              # Block Open PROXY <br>  
+# Block Open PROXY <br>  
               /interface list add name=WAN<br>
               /interface list member <br>
               add list=WAN interface="ether to ISP" <br>
@@ -518,7 +518,7 @@
               Anticipate DDoS attacks, namely by limiting the number of connections in firewall rules. 
               When there is a DDoS attack, the system detects the number of connection requests exceeding the specified limit.<br><br>
               <code class="routeros">
-              # Anti DDoS Attacks<br>
+# Anti DDoS Attacks<br>
               /ip firewall filter<br>
               add chain=forward connection-state=new action=jump jump-target=block-ddos comment="Anti DDoS Attacks"<br>
               add chain=forward connection-state=new src-address-list=ddoser dst-address-list=ddosed action=drop<br>
@@ -537,7 +537,7 @@
               Various kinds of actions that can be taken to prevent from the networking side. One way is to do drop traffic from the Port Scanner application.
               <br><br>
               <code class="routeros">	
-              # Anti PORT SCAN<br>   
+# Anti PORT SCAN<br>   
               /ip firewall filter<br>
               add chain=input protocol=tcp psd=21,3s,3,1 action=add-src-to-address-list address-list="port scanners" address-list-timeout=2w comment="Mark Source ip port scanner to Address list " disabled=no<br>
               add chain=input protocol=tcp tcp-flags=fin,!syn,!rst,!psh,!ack,!urg action=add-src-to-address-list address-list="port scanners" address-list-timeout=2w comment="NMAP FIN Stealth scan"<br>
@@ -558,7 +558,7 @@
               BRUTE FORCE is an attack carried out to break into passwords by trying each password at random from a combination of letters, numbers and symbols, until finally finding the right password. Usually BRUTE FORCEs are carried out by robots or programs, because to get a combination of letters, numbers and symbols, certain programs/algorithms can quickly create them.
               <br><br>
               <code class="routeros">
-              # Anti Hack from BruteForce FTP + SSH<br>	 
+# Anti Hack from BruteForce FTP + SSH<br>	 
               /ip firewall filter<br>
               add action=drop chain=input comment="drop ftp BRUTE FORCErs" dst-port=21 protocol=tcp src-address-list=ftp_blacklist<br>
               add action=accept chain=output content="530 Login incorrect" dst-limit=1/1m,9,dst-address/1m protocol=tcp<br>
@@ -588,7 +588,7 @@
               Second Key Knock = ping -s 172 (IP Adrress)
               <br><br>
               <code class="routeros">
-              # Port Knocking Use Icmp + Packet Size<br>
+# Port Knocking Use Icmp + Packet Size<br>
               /ip firewall filter<br>
               add action=add-src-to-address-list address-list="port-knocking-first" address-list-timeout="00:00:00" chain=input packet-size="100" protocol=icmp comment="Port Knocking Use Icmp + Packet Size"<br>
               add action=add-src-to-address-list address-list="port-knocking-second" address-list-timeout="00:00:00" chain=input packet-size="200" protocol=icmp src-address-list="port-knocking-first"<br>
