--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -145,7 +145,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK <span style="color:#ff6600">PORT KNOCKING</span> GENERATOR WITH <span style="color:#ff6600">ICMP + PACKET SIZE</span></h1>
+        <h1>MIKROTIK <span style="color:#ff6600">PORT KNOCKING</span> USE <span style="color:#ff6600">ICMP + PACKET SIZE</span> GENERATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
