--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch to Telegram, WA, E-mail, SMS</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch to Telegram, WA, Email, SMS</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
