--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared Up-To</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared Up-To</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
