--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -144,7 +144,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK FREE HOTSPOT WI-FI <span style="color:#ff6600">QR CODE</span> SCAN GENERATOR</h1>
+        <h1>MIKROTIK FREE HOTSPOT WI-FI <span style="color:#ff6600">QR CODE</span> TEMPLATE CREATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
