--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -137,7 +137,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK HOTSPOT <span style="color:#ff6600">USERNAME PASSWORD</span> GENERATOR</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">HOTSPOT USERNAME PASSWORD</span> GENERATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
